add node-sass in build process

--- a/webpack-demo_v4_SASS/src/sass/variables.scss
+++ b/webpack-demo_v4_SASS/src/sass/variables.scss
@@ -1,6 +1,6 @@
 $canon-red: #db0812;
 $canon-dark-grey: #4b4f54;
 $canon-black: #000000;
-$canon-white: #FEFEFE;
+$canon-white: #eaeafe;
 $canon-light-grey: #D1d3d3;
 $canon-titanium: #E8E9EA;
